<resources>

    <string name="infoButtons">Connect to Hono to enable sensor buttons</string>

    <string name="app_name">Skadi</string>
    <string name="plain_zero">0</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="heartRateValue">Heart Rate Value:</string>
    <string name="gyroscopeValue">Gyroscope Value:</string>
    <string name="acceleratorValue">Accelerator Value:</string>
    <string name="lightValue">Light Value:</string>

    <string name="sensorOff">Sensor off</string>

    <string name="resetAllSensors">Reset all Sensors</string>

    <string name="connect_to_hono">Connect to Hono</string>
    <string name="disconnect_from_hono">Disconnect from Hono</string>
    <string name="connected_to_hono">Hono status: Connected</string>
    <string name="disconnected_from_hono">Hono status: Disconnected</string>

</resources>