<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                        <Button
                            android:id="@+id/btnHeartRateSensor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/start"
                            android:textSize="20sp"
                            android:layout_marginLeft="30sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/heartRateValue"/>

                        <TextView
                            android:id="@+id/heartRateSensorValueView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:text="@string/sensorOff" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                        <Button
                            android:id="@+id/btnGyroscopeSensor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/start"
                            android:textSize="20sp"
                            android:layout_marginLeft="30sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/gyroscopeValue"/>

                        <TextView
                            android:id="@+id/gyroscopeSensorValueView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:text="@string/sensorOff" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                        <Button
                            android:id="@+id/btnAcceleratorSensor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/start"
                            android:textSize="20sp"
                            android:layout_marginLeft="30sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/acceleratorValue"/>

                        <TextView
                            android:id="@+id/acceleratorSensorValueView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:text="@string/sensorOff" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                        <Button
                            android:id="@+id/btnLightSensor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/start"
                            android:textSize="20sp"
                            android:layout_marginLeft="30sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/lightValue"/>

                        <TextView
                            android:id="@+id/lightSensorValueView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:text="@string/sensorOff" />

                </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/toggle_hono_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="150dp"
            android:text="@string/connect_to_hono"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/honoConnectionStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="120dp"
            android:text="@string/disconnected_from_hono"
            android:textSize="20sp"
            android:gravity="center" />

</FrameLayout>